--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>Contact Information</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <h3>Contact Information</h3>
     <i><b>e-mail: </b>aliercan08@gmail.com</i><br />
     <i><a href="https://www.linkedin.com/in/aliercanb%C3%BCk/">Linkedin</a></i> <br /><br />
 
-    <h4>Contact Form</h4>
     <form action="mailto:startrek7894@gmail.com" method="post" enctype="text/plain">
+      <h4>Contact Form</h4>
       <label>Name</label><br />
       <input type="text" name="name" size="30" value="" /><br />
       <label>Surname</label><br />
