--- a/index.html
+++ b/index.html
@@ -3,27 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <title>Ercan's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
+
   <body>
     <table cellspacing="25">
       <tr>
-        <td><image src="images/VesikalıkC.jpg" alt="Ercan profile picture"></image></td>
+        <td><image src="images\Circle_Vesikalık.png" alt="Ercan profile picture"></image></td>
         <td>
           <h1>Ali Ercan Bük</h1>
           <p>
-            <em>
-              Cost Controller at <strong><a href="https://www.man.eu">MAN Turkey</a></strong>
-            </em>
+            <em> Cost Controller at <a href="https://www.man.eu">MAN Turkey</a> </em>
           </p>
           <p>
-            <em>Graduated from <strong>Middle East Technical University Business Administration Department</strong></em>
+            <em
+              >Graduated from Middle East Technical University,<br />
+              Business Administration Department</em
+            >
           </p>
           <a href="contact.html">Contact Information</a>
         </td>
       </tr>
     </table>
   </body>
-  <hr noshade="3" size="3" color="purple" />
+  <hr noshade="3" size="3" />
 
   <h3>Previous Experiences</h3>
   <table cellspacing="15">
@@ -36,7 +39,7 @@
       <td><i>1 Dec 2020 - 12 Oct 2021</i></td>
     </tr>
     <tr>
-      <td>Entrepreneurship and Business Development Assistant Specialist at ODTÜ Teknokent Yönetim A.Ş.</td>
+      <td>Entrepreneurship and Business Development Assistant Specialist<br />at ODTÜ Teknokent Yönetim A.Ş.</td>
       <td><i>2 Aug 2019 - 31 Dec 2019</i></td>
     </tr>
   </table>
@@ -45,7 +48,10 @@
   <ol type="i">
     <li>Member of METU Business Club</li>
     <li>Member of Turkish Folklore Society</li>
-    <li>Bilateral Comenius EU Project "Serve to Lead" about Leadership</li>
+    <li>
+      Bilateral Comenius EU Project <br />
+      "Serve to Lead" about Leadership
+    </li>
   </ol>
   <hr noshade="3" />
   <h3>Personal Skills</h3>
@@ -100,6 +106,6 @@
   <br />
   <hr noshade="3" />
   <h3>
-    <strong><a href="hobbies.html"> My Hobbies</a></strong>
+    <a href="hobbies.html"> My Hobbies</a>
   </h3>
 </html>
