--- a/hobbies.html
+++ b/hobbies.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>My Hobbies</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h4>My Hobbies</h4>
+    <h3>My Hobbies</h3>
     <ul>
       <li>Music (<a href="https://www.youtube.com/@ercanbuk3178">Youtube Channel Link</a>)</li>
       <li>Handball</li>
